--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-DISCORD_TOKEN = "ODU5NzEyNDk0OTEwMzA4Mzgy.Gx1hIS.iZZR-PDLoxFQF3hhNKY_y3g6eDs18r3L0d6E7c"
-PREFIX = .
-CLIENT_ID = 859712494910308382
-GUILD_ID = 752351705114476655
+DISCORD_TOKEN = tokenHere
+CLIENT_ID = clientidHere
+GUILD_ID = guildidHere
